--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html {
   body
   {
     background-color: #222;
-    color:#aaa;
+    color:#bbb;
     font-family: monospace;
   }
 
@@ -61,4 +61,17 @@ html {
   td
   {
     padding:5px;
+  }
+
+  .quote
+  {
+    display: block;
+    font-style: italic;
+    background-color: #111;
+    border-left:10px solid black;
+    margin-top:10px;
+    padding-left:20px;
+    padding-top:10px;
+    padding-bottom:10px;
+    color:#aaa
   }
