--- a/style.css
+++ b/style.css
@@ -96,3 +96,14 @@ html {
     padding-bottom:10px;
     color:#aaa
   }
+
+
+  .download
+  {
+    text-transform: uppercase;
+    margin-top: 10px;
+    display: inline-block;
+    background-color: #444;
+    border-radius: 10px;
+    padding: 10px;
+  }
